# auroraftp

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
auroraftp/: __init__.py  __main__.py  app.py
auroraftp/core/: config.py  events.py  models.py
auroraftp/protocols/: __init__.py  autodetect.py  base.py  ftp_async.py  sftp_async.py
auroraftp/services/: __init__.py  logging.py  sync_engine.py  transfer_manager.py
auroraftp/tests/: __init__.py
auroraftp/tests/integration/: docker-compose.yml  test_protocols.py
auroraftp/tests/unit/: test_config.py  test_models.py
auroraftp/widgets/: __init__.py  connection_tab.py  file_pane.py  log_panel.py  main_window.py  site_manager.py  transfer_queue.py
debian/: changelog  control  copyright  rules  watch
debian/source/: options
debian/upstream/: metadata
resources/: auroraftp.desktop
scripts/: make_appimage.sh  make_appimage_standalone.sh  make_deb.sh  make_deb_auto_deps.sh  make_deb_native.sh  run_dev.sh  run_tests.sh
